project: updated meson build for linux

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,5 @@
 project('jitterbugpair', 'c')
+
 sources = ['JitterbugPair/main.c',
            'Libraries/libimobiledevice/common/debug.c',
            'Libraries/libimobiledevice/common/userpref.c',
@@ -7,13 +8,24 @@ incdir = include_directories(['Libraries/include',
                               'Libraries/libimobiledevice',
                               'Libraries/libimobiledevice/common',
                               'Libraries/libimobiledevice/include'])
-openssl = dependency('openssl', version: ['>= 0.9.8'], static: true)
-libusbmuxd = dependency('libusbmuxd-2.0', static: true)
+
+os = host_machine.system()
+
+if os == 'linux'
+  crypto = dependency('libgcrypt', static: true)
+  libusbmuxd = dependency('libusbmuxd', static: true)
+  cflags = ['-DHAVE_ASPRINTF', '-DHAVE_VASPRINTF']
+else
+  crypto = dependency('openssl', version: ['>= 0.9.8'], static: true)
+  libusbmuxd = dependency('libusbmuxd-2.0', static: true)
+  cflags = ['-DHAVE_CONFIG_H']
+endif
+
 libimobiledevice = dependency('libimobiledevice-1.0', static: true)
-dependencies = [openssl, libusbmuxd, libimobiledevice]
-cflags = ['-DHAVE_CONFIG_H']
+dependencies = [crypto, libusbmuxd, libimobiledevice]
 executable('jitterbugpair',
            sources,
            include_directories: incdir,
            dependencies: dependencies,
-           c_args: cflags)
+           c_args: cflags,
+           install: true)
