--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,3 +73,105 @@ jobs:
         with:
           name: jitterbugpair-linux
           path: build/jitterbugpair
+  build-windows:
+    name: JitterbugPair (Windows)
+    runs-on: windows-2019
+    steps:
+      - uses: msys2/setup-msys2@v2
+        with:
+          install: >-
+            mingw64/mingw-w64-x86_64-gcc
+            mingw64/mingw-w64-x86_64-pkg-config
+            mingw64/mingw-w64-x86_64-meson
+            mingw64/mingw-w64-x86_64-libusbmuxd
+            mingw64/mingw-w64-x86_64-libimobiledevice
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: Build
+        run: msys2 -c 'meson --buildtype=release build && cd build && meson compile'
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: jitterbugpair-win64
+          path: |
+            build/jitterbugpair.exe
+            build/libwinpthread-1.dll
+  package-ipa:
+    name: Package IPA
+    runs-on: macos-10.15
+    needs: build-ios
+    if: github.event_name == 'release' || github.event.inputs.test_release == 'true'
+    steps:
+      - name: Install ldid
+        run: brew install ldid
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: Jitterbug
+      - name: Fakesign IPA
+        run: |
+          tar xf Jitterbug.xcarchive.tgz
+          mv Jitterbug.xcarchive/Products/Applications Payload
+          ldid -S Payload/Jitterbug.app/Frameworks/OpenSSL.framework/OpenSSL
+          ldid -S Payload/Jitterbug.app/Jitterbug
+          zip -r Jitterbug.ipa Payload -x "._*" -x ".DS_Store" -x "__MACOSX"
+      - name: Upload Release Asset
+        if: github.event_name == 'release'
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: Jitterbug.ipa
+          asset_name: Jitterbug.ipa
+          asset_content_type: application/octet-stream
+      - name: Send Dispatch Event
+        if: github.event_name == 'release'
+        continue-on-error: true
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          repository: ${{ secrets.DISPATCH_ALTSTORE_REPO_NAME }}
+          event-type: new-release
+  package-pair:
+    name: Package JitterbugPair
+    runs-on: ubuntu-20.04
+    needs: [build-macos, build-ubuntu, build-windows]
+    if: github.event_name == 'release' || github.event.inputs.test_release == 'true'
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+      - name: Fix Permissions
+        run: for i in jitterbugpair-*/; do chmod +x $i/* ; zip -r -j "${i%/}.zip" "$i"; done
+      - name: Upload macOS
+        if: github.event_name == 'release'
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: jitterbugpair-macos.zip
+          asset_name: jitterbugpair-macos.zip
+          asset_content_type: application/octet-stream
+      - name: Upload Linux
+        if: github.event_name == 'release'
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: jitterbugpair-linux.zip
+          asset_name: jitterbugpair-linux.zip
+          asset_content_type: application/octet-stream
+      - name: Upload Windows
+        if: github.event_name == 'release'
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: jitterbugpair-win64.zip
+          asset_name: jitterbugpair-win64.zip
+          asset_content_type: application/octet-stream
