--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,20 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      - name: Cache OpenSSL
+        id: cache-openssl
+        uses: actions/cache@v2
+        with:
+          path: Libraries/openssl-apple/frameworks
+          key: ${{ hashFiles('Libraries/openssl-apple/**') }}
+      - name: Build OpenSSL
+        if: steps.cache-openssl.outputs.cache-hit != 'true'
+        run: |
+          cd Libraries/openssl-apple
+          ./build-libssl.sh --version=1.1.1j
+          ./create-openssl-framework.sh static
       - name: Build
-        run: xcodebuild archive -archivePath Jitterbug -scheme Jitterbug -sdk iphoneos -configuration Release CODE_SIGNING_ALLOWED=NO
+        run: xcodebuild archive -archivePath Jitterbug -scheme Jitterbug -configuration Release CODE_SIGNING_ALLOWED=NO
       - name: Compress
         run: tar cf Jitterbug.xcarchive.tgz Jitterbug.xcarchive
       - name: Upload
