--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           submodules: recursive
       - name: Build
-        run: xcodebuild archive -archivePath Jitterbug -scheme Jitterbug -sdk iphoneos -configuration Release CODE_SIGNING_ALLOWED=NO
+        run: xcodebuild archive -archivePath Jitterbug -scheme Jitterbug -configuration Release CODE_SIGNING_ALLOWED=NO
       - name: Compress
         run: tar cf Jitterbug.xcarchive.tgz Jitterbug.xcarchive
       - name: Upload
