main: auto-launch from URL scheme
Resolves #3

--- a/Jitterbug/Info.plist
+++ b/Jitterbug/Info.plist
@@ -29,6 +29,18 @@
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.osy86.Jitterbug</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>jitterbug</string>
+			</array>
+		</dict>
+		<dict/>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
