--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,23 @@ jobs:
         with:
           name: Jitterbug
           path: Jitterbug.xcarchive.tgz
+  build-ios-lite:
+    name: Jitterbug Lite
+    runs-on: macos-10.15
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: Build
+        run: xcodebuild archive -archivePath JitterbugLite -scheme JitterbugLite -configuration Release CODE_SIGNING_ALLOWED=NO
+      - name: Compress
+        run: tar cf JitterbugLite.xcarchive.tgz JitterbugLite.xcarchive
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: JitterbugLite
+          path: JitterbugLite.xcarchive.tgz
   build-macos-ui:
     name: Jitterbug (macOS)
     runs-on: macos-10.15
@@ -144,6 +161,39 @@ jobs:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: Jitterbug.ipa
           asset_name: Jitterbug.ipa
+          asset_content_type: application/octet-stream
+      - name: Send Dispatch Event
+        if: github.event_name == 'release'
+        continue-on-error: true
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          repository: ${{ secrets.DISPATCH_ALTSTORE_REPO_NAME }}
+          event-type: new-release
+  package-ipa-lite:
+    name: Package IPA Lite
+    runs-on: ubuntu-20.04
+    needs: build-ios-lite
+    if: github.event_name == 'release' || github.event.inputs.test_release == 'true'
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: JitterbugLite
+      - name: Package IPA
+        run: |
+          tar xf JitterbugLite.xcarchive.tgz
+          mv JitterbugLite.xcarchive/Products/Applications Payload
+          zip -r JitterbugLite.ipa Payload -x "._*" -x ".DS_Store" -x "__MACOSX"
+      - name: Upload Release Asset
+        if: github.event_name == 'release'
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: JitterbugLite.ipa
+          asset_name: JitterbugLite.ipa
           asset_content_type: application/octet-stream
       - name: Send Dispatch Event
         if: github.event_name == 'release'
