readme: update build instructions

--- a/CodeSigning.xcconfig.sample
+++ b/CodeSigning.xcconfig.sample
@@ -4,4 +4,8 @@ DEVELOPMENT_TEAM = XYZ0123456
 // Prefix of unique bundle IDs registered to you in Apple Developer Portal.
 // You need to register:
 //   - com.myuniquename.Jitterbug
+//   - com.myuniquename.JitterbugLite (optional)
+//   - com.myuniquename.Jitterbug.JitterbugTunnel
+// Make sure to include the Network Extensions entitlement unless you are only
+// build JitterbugLite.
 PRODUCT_BUNDLE_PREFIX = com.myuniquename
